--- a/index.html
+++ b/index.html
@@ -1,146 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ismail | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ismail Cherraki | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      scroll-behavior: smooth;
       font-family: 'Poppins', sans-serif;
     }
 
     body {
       background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-      color: white;
-      line-height: 1.6;
-      padding: 20px;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 2rem;
     }
 
     header {
       text-align: center;
-      padding: 40px 0;
-      animation: fadeIn 1s ease-in-out;
+      margin-bottom: 2rem;
+      animation: fadeIn 1.2s ease-in-out;
     }
 
     header h1 {
-      font-size: 3rem;
-      color: #00ffd5;
+      font-size: 2.5rem;
+      font-weight: 600;
     }
 
-    header p {
-      font-size: 1.2rem;
-      color: #ccc;
+    .profile-img {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      border: 4px solid #fff;
+      object-fit: cover;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+      margin-bottom: 1.5rem;
+      animation: fadeIn 1.6s ease-in-out;
     }
 
-    nav {
-      text-align: center;
-      margin: 20px 0;
+    .about {
+      max-width: 600px;
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 2rem;
+      border-radius: 20px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+      animation: fadeIn 2s ease-in-out;
     }
 
-    nav a {
-      color: #00ffd5;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s;
+    .about h2 {
+      margin-bottom: 1rem;
+      font-size: 1.8rem;
+      font-weight: 600;
     }
 
-    nav a:hover {
-      color: #ff7b00;
-    }
-
-    section {
-      margin: 50px 0;
-      animation: slideIn 1s ease-in-out;
-    }
-
-    .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-
-    .project {
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      transition: transform 0.3s;
-    }
-
-    .project:hover {
-      transform: translateY(-5px);
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 60px;
-      font-size: 0.9rem;
-      color: #aaa;
+    .about p {
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #eee;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
+      from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes slideIn {
-      from { opacity: 0; transform: translateX(-30px); }
-      to { opacity: 1; transform: translateX(0); }
-    }
-
-    @media (max-width: 600px) {
-      header h1 { font-size: 2rem; }
-      nav a { display: block; margin: 10px 0; }
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Ismail</h1>
-    <p>Développeur Web | Passionné par le code & le sport ⚽️💻</p>
+    <img src="./ismail.jpg" alt="Ismail Cherraki" class="profile-img" />
+    <h1>Ismail Cherraki</h1>
   </header>
-
-  <nav>
-    <a href="#about">À propos</a>
-    <a href="#projects">Projets</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <section id="about">
-    <h2>🧑‍💻 À propos de moi</h2>
-    <p>Je suis un développeur junior maîtrisant HTML et CSS. J'aime créer des interfaces modernes et animées. J'apprends chaque jour pour devenir meilleur !</p>
+  <section class="about">
+    <h2>About Me</h2>
+    <p>
+      I'm a passionate and ambitious young professional with a background in economics and sales. I love football and fitness, and I'm always looking to grow and learn new skills. I'm actively seeking opportunities to work in dynamic and team-oriented environments.
+    </p>
   </section>
-
-  <section id="projects">
-    <h2>🚀 Mes Projets</h2>
-    <div class="projects">
-      <div class="project">
-        <h3>Portfolio</h3>
-        <p>Un site simple pour présenter mes compétences avec HTML et CSS.</p>
-      </div>
-      <div class="project">
-        <h3>Page d'accueil Sport</h3>
-        <p>Design inspiré de Decathlon pour un site de sport.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2>📬 Contact</h2>
-    <p>Tu peux me retrouver sur :</p>
-    <ul>
-      <li><a href="https://github.com/ismail" target="_blank">GitHub</a></li>
-      <li><a href="mailto:ismail@example.com">ismail@example.com</a></li>
-    </ul>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Ismail. Tous droits réservés.</p>
-  </footer>
 </body>
 </html>
