--- a/index.html
+++ b/index.html
@@ -4,85 +4,85 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ismail Cherraki | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      scroll-behavior: smooth;
       font-family: 'Poppins', sans-serif;
     }
 
     body {
       background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      padding: 2rem;
-    }
-
-    header {
-      text-align: center;
-      margin-bottom: 2rem;
-      animation: fadeIn 1.2s ease-in-out;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      font-weight: 600;
-    }
-
-    .profile-img {
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
-      border: 4px solid #fff;
-      object-fit: cover;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-      margin-bottom: 1.5rem;
-      animation: fadeIn 1.6s ease-in-out;
-    }
-
-    .about {
-      max-width: 600px;
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 2rem;
-      border-radius: 20px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
-      animation: fadeIn 2s ease-in-out;
-    }
-
-    .about h2 {
-      margin-bottom: 1rem;
-      font-size: 1.8rem;
-      font-weight: 600;
-    }
-
-    .about p {
-      font-size: 1rem;
+      color: white;
       line-height: 1.6;
-      color: #eee;
+      padding: 40px 20px;
+      animation: fadeIn 2s ease-in;
     }
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      color: #bbb;
+    }
+
+    .about {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    .about img {
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 20px;
+      border: 4px solid white;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+    }
+
+    .about h2 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+    .about p {
+      max-width: 600px;
+      font-size: 1rem;
+      color: #ddd;
+    }
   </style>
 </head>
 <body>
   <header>
-    <img src="./ismail.jpg" alt="Ismail Cherraki" class="profile-img" />
     <h1>Ismail Cherraki</h1>
+    <p>Front-end Developer | Passionate about sport & web design</p>
   </header>
+
   <section class="about">
+    <img src="ismail.jpg" alt="Ismail Cherraki" />
     <h2>About Me</h2>
     <p>
-      I'm a passionate and ambitious young professional with a background in economics and sales. I love football and fitness, and I'm always looking to grow and learn new skills. I'm actively seeking opportunities to work in dynamic and team-oriented environments.
+      Hello! I'm Ismail, a front-end web developer passionate about creating clean, animated, and interactive websites.
+      I have experience in sales, a background in economics, and a strong love for fitness and football.
     </p>
   </section>
 </body>
