--- a/index.html
+++ b/index.html
@@ -3,87 +3,102 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ismail Cherraki | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+  <title>Ismail Cherraki - Web Designer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Inter', sans-serif;
     }
-
     body {
-      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-      color: white;
+      background-color: #f0f4ff;
+      color: #0f172a;
       line-height: 1.6;
-      padding: 40px 20px;
-      animation: fadeIn 2s ease-in;
     }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
     header {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      color: #bbb;
-    }
-
-    .about {
       display: flex;
-      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
-      text-align: center;
-      margin-top: 40px;
+      padding: 1rem 2rem;
+      background: white;
     }
-
-    .about img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin-bottom: 20px;
-      border: 4px solid white;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+    nav a {
+      margin-left: 1rem;
+      text-decoration: none;
+      color: #0f172a;
+      font-weight: 500;
     }
-
-    .about h2 {
-      font-size: 2rem;
-      margin-bottom: 10px;
+    nav a.active {
+      border-bottom: 2px solid #3b82f6;
     }
-
-    .about p {
-      max-width: 600px;
+    .hero {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 4rem 2rem;
+    }
+    .hero-text h1 {
+      font-size: 2.5rem;
+    }
+    .hero-text h1 span {
+      color: #3b82f6;
+    }
+    .hero-text button {
+      margin-top: 1.5rem;
+      padding: 0.5rem 1rem;
       font-size: 1rem;
-      color: #ddd;
+      color: white;
+      background-color: #3b82f6;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .hero-img img {
+      width: 240px;
+      border-radius: 50%;
+    }
+    footer {
+      margin-top: 3rem;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+    }
+    footer a {
+      text-decoration: none;
+      color: #0f172a;
+      font-size: 1.2rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Ismail Cherraki</h1>
-    <p>Front-end Developer | Passionate about sport & web design</p>
+    <div><strong>Ismail</strong></div>
+    <nav>
+      <a href="#" class="active">Home</a>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#works">Works</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
-  <section class="about">
-    <img src="ismail.jpg" alt="Ismail Cherraki" />
-    <h2>About Me</h2>
-    <p>
-      Hello! I'm Ismail, a front-end web developer passionate about creating clean, animated, and interactive websites.
-      I have experience in sales, a background in economics, and a strong love for fitness and football.
-    </p>
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Hi, <br> I'm <span>Ismail Cherraki</span><br> Web Designer</h1>
+      <button>Contact</button>
+    </div>
+    <div class="hero-img">
+      <img src="https://via.placeholder.com/240" alt="Ismail Cherraki" />
+    </div>
   </section>
+
+  <footer>
+    <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+    <a href="#">Behance</a>
+    <a href="#">GitHub</a>
+  </footer>
 </body>
 </html>
