--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
       <button>Contact</button>
     </div>
     <div class="hero-img">
-      <img src="https://via.placeholder.com/240" alt="Ismail Cherraki" />
+      <img src="file:///C:/Users/ISSMAIL/Pictures/WhatsApp%20Image%202025-05-25%20at%2021.33.57_59a10032.jpg" alt="Ismail Cherraki" />
     </div>
   </section>
 
   <footer>
-    <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/ismail-cherraki-438213307/" target="_blank">LinkedIn</a>
     <a href="#">Behance</a>
     <a href="#">GitHub</a>
   </footer>
