--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       </div>
     </div>
     <div class="hero-text">
-      <h1>Hi, <br> I'm <span>Ismail Cherraki</span><br> Front-End Web Developer</h1>
+      <h1>Hi, <br> I'm <span>Ismail Cherraki</span><br> Full Stack Developer</h1>
       <button>Contact Me</button>
     </div>
   </section>
