--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <h2>About Me</h2>
     <div class="cards-container">
       <div class="card">
-        <h3>👨‍💻 Front-End Developer</h3>
+        <h3>👨‍💻 Full Stack Developer</h3>
         <p>I am a creative and enthusiastic front-end developer with a strong passion for building modern, responsive
           websites. My goal is to create smooth user experiences and visually engaging designs. I enjoy turning designs
           into functional code using HTML and CSS, and I’m expanding my skills in JavaScript to bring more interactivity
